# climate-trace-handbook

./: .buildinfo  Makefile  README.md  country_total_emissions.html  genindex.html  ingestion.html  initial_analysis.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  procedures.md  pyproject.toml  search.html  searchindex.js  uncertainty_drilldown.html
_sources/: ingestion.ipynb  intro.md  uncertainty_drilldown.ipynb
ct_book/: _config.yml  _constants.ipynb  _toc.yml  country_total_emissions.ipynb  ingestion.ipynb  initial_analysis.ipynb  uncertainty_drilldown.ipynb
ct_book/_build/.doctrees/: _constants.doctree  environment.pickle  ingestion.doctree  ingestion_rust.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
ct_book/_build/html/: .buildinfo  _constants.html  country_total_emissions.html  genindex.html  ingestion.html  ingestion_rust.html  initial_analysis.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js  uncertainty_drilldown.html
ct_book/_build/html/_sources/: _constants.ipynb  ingestion.ipynb  ingestion_rust.ipynb  initial_analysis.ipynb  uncertainty_drilldown.ipynb
ct_book/_build/jupyter_execute/: _constants.ipynb  ingestion.ipynb  ingestion_rust.ipynb  initial_analysis.ipynb  markdown-notebooks.ipynb  notebooks.ipynb  uncertainty_drilldown.ipynb
src/ctrace/: __init__.py  constants.py  data.py  enums.py
