[tool.poetry]
name = "climate-tutorials"
version = "0.1.0"
description = "A series of tutorials on climate data"
authors = ["Tim Hunter <tjhunter@cs.stanford.edu>"]
license = "CC BY-SA 4.0 Deed"
readme = "README.md"

# Not packaging for now, just a book.
package-mode = false


[tool.poetry.dependencies]
# Dependencies for the ctrace package
# This narrow range for python is required by pytensor->pymc
# TODO: see if we can expand it in the future
python = ">=3.10,<3.13"
polars = "^0.20.16"
pyarrow = "^15.0.2"
pooch = "^1.8.1"

# Dependencies for the book
jupyter-book = "^1.0.0"
jupyter = "^1.0.0"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
plotly = "^5.20.0"
ghp-import = "^2.1.0"
scipy = "^1.12.0"

# Dependencies for the bayesian analysis
arviz = "^0.17.1"
pymc = "^5.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
prettier = "^0.0.7"
black = "^24.3.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
